# mewmew

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  example.txt  example2.txt  main.cpp  mewmew.g4  paper.bib  paper.md  speedtest.md  test.sh
.github/workflows/: c-cpp.yml  codeql-analysis.yml
examples/: 1.txt  3.txt  4.txt  adddiv.mew.txt  example2.txt  factorial.mew.txt  helloworld.mew.txt
media/: README.txt
